--- a/netlify.toml
+++ b/netlify.toml
@@ -13,8 +13,21 @@
   to = "/.netlify/functions/payment/webhook"
   status = 200
 
+# Redirect per SPA: tutte le route non trovate vanno a index.html
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 [build.environment]
+  NODE_ENV = "production"
   NODE_VERSION = "18"
 
 [[plugins]]
-  package = "@netlify/plugin-functions-install-core" 
+  package = "@netlify/plugin-functions-install-core"
+
+# Header per consentire l'uso di Google Translate
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' translate.google.com translate.googleapis.com; style-src 'self' 'unsafe-inline' translate.googleapis.com; img-src 'self' data: translate.google.com translate.googleapis.com; connect-src 'self' translate.googleapis.com; frame-src translate.google.com" 
