--- a/netlify.toml
+++ b/netlify.toml
@@ -21,13 +21,13 @@
 
 [build.environment]
   NODE_ENV = "production"
-  NODE_VERSION = "18"
+  NODE_VERSION = "20"
 
 [[plugins]]
   package = "@netlify/plugin-functions-install-core"
 
-# Header per consentire l'uso di Google Translate
+# Header per consentire l'uso di Google Translate e Firebase
 [[headers]]
   for = "/*"
   [headers.values]
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' translate.google.com translate.googleapis.com; style-src 'self' 'unsafe-inline' translate.googleapis.com; img-src 'self' data: translate.google.com translate.googleapis.com; connect-src 'self' translate.googleapis.com; frame-src translate.google.com" 
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' translate.google.com translate.googleapis.com; style-src 'self' 'unsafe-inline' translate.googleapis.com fonts.googleapis.com; font-src 'self' fonts.gstatic.com; img-src 'self' data: translate.google.com translate.googleapis.com; connect-src 'self' translate.googleapis.com *.firebaseio.com firestore.googleapis.com *.googleapis.com; frame-src translate.google.com" 
