--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "prebuild": "npm install && cd netlify/functions && npm install",
-    "build": "vite build",
+    "build": "npx vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "netlify": "netlify dev",
@@ -20,7 +20,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.5.1",
-    "stripe": "^14.21.0"
+    "stripe": "^14.21.0",
+    "vite": "^5.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
