--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.5.1",
-    "stripe": "^14.21.0",
-    "vite": "^5.4.2"
+    "stripe": "^14.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
