--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "prebuild": "npm install && cd netlify/functions && npm install",
-    "build": "./node_modules/.bin/vite build",
+    "prebuild": "npm install --include=dev && cd netlify/functions && npm install",
+    "build": "npx vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "netlify": "netlify dev",
@@ -20,7 +20,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.5.1",
-    "stripe": "^14.21.0"
+    "stripe": "^14.21.0",
+    "vite": "^5.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -36,7 +37,6 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "typescript-eslint": "^8.3.0"
   }
 }
