--- a/netlify.toml
+++ b/netlify.toml
@@ -32,4 +32,4 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' translate.google.com translate.googleapis.com; style-src 'self' 'unsafe-inline' translate.googleapis.com fonts.googleapis.com; font-src 'self' fonts.gstatic.com; img-src 'self' data: translate.google.com translate.googleapis.com; connect-src 'self' translate.googleapis.com *.firebaseio.com firestore.googleapis.com *.googleapis.com; frame-src translate.google.com" 
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' translate.google.com translate.googleapis.com *.stripe.com; style-src 'self' 'unsafe-inline' translate.googleapis.com fonts.googleapis.com; font-src 'self' fonts.gstatic.com; img-src 'self' data: translate.google.com translate.googleapis.com; connect-src 'self' translate.googleapis.com *.firebaseio.com firestore.googleapis.com *.googleapis.com *.stripe.com; frame-src translate.google.com *.stripe.com" 
