--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "netlify:build": "netlify build"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.2.0",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.8.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
