--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@stripe/stripe-js": "^7.2.0",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.8.0",
+    "i18next": "^23.16.8",
+    "i18next-browser-languagedetector": "^7.2.2",
+    "i18next-http-backend": "^2.7.3",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.3",
     "react-router-dom": "^7.5.1",
     "stripe": "^14.21.0",
     "vite": "^5.4.2"
